# istreams-attendance-tracking-cli

./: App.jsx  app.json  babel.config.js  config.js  firebaseConfig.js  index.js  package-lock.json  package.json
android/: build.gradle  link-assets-manifest.json  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/istreamsattendanceapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/iStreamsAttendanceApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/iStreamsAttendanceApp.xcodeproj/: project.pbxproj
src/Animations/: FailureAnimationScreen.jsx  SuccessAnimationScreen.jsx
src/Components/: AllEmpReportScreen.jsx  CheckinComponent.jsx  CustomDatePicker.jsx  DarkModeToggle.jsx  EmployeeAddComponent.jsx  EmployeeList.jsx  EmployeeListCard.jsx  Header.jsx  HomeCarousel.jsx  HomeHeader.jsx  ImageRecognitionResult.jsx  LocationRadiusDetector.jsx  ManualImageCapture.jsx  ModuleCard.jsx  SelectEmpReportScreen.jsx
src/Context/: AuthContext.jsx  CheckinContext.jsx  ThemeContext.js
src/Logics/: GlobalVariables.js  LoadData.js  LocationService.js  LoginBLL.js
src/Modal/: AutoImageCaptureModal.jsx  CategoryListPopUp.jsx  DesignationListPopUp.jsx  ImageEditPopUp.jsx  LeaveTypeListPopUp.jsx  LoanCategoryPopUp.jsx  LoanTypeListPopUp.jsx  ManPowerSuppListPopUp.jsx  ManualImageCaptureModal.jsx  ProjectBOQListPopUp.jsx  ProjectListPopUp.jsx  ProjectLocationPopUp.jsx  SelfCheckinPopup.jsx  (+1 more)
(+51 files in other folders)
